fix: align page heading to center

--- a/src/app/home/post/post.component.scss
+++ b/src/app/home/post/post.component.scss
@@ -27,6 +27,7 @@
   &__primary-title {
     font-size: pxToRem(48);
     margin-bottom: pxToRem(16);
+    text-align: center;
   }
   &__excerpt {
     font-family: "Lora", serif;
